--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 asgiref==3.8.1
+cramjam==2.9.0
 Django==5.1.4
+dnspython==2.7.0
+mongoengine==0.29.1
+pykerberos==1.2.4
+pymongo==4.10.1
+python-snappy==0.7.3
 sqlparse==0.5.2
